--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -1,3 +1,5 @@
 {
-  "url": "https://www.olx.pl/nieruchomosci/mieszkania/wynajem/krakow/?search%5Bfilter_enum_rooms%5D%5B0%5D=two&search%5Bfilter_float_price%3Ato%5D=2500&search%5Border%5D=created_at%3Adesc#764927822"
+  "url": "https://www.olx.pl/nieruchomosci/mieszkania/wynajem/krakow/?search%5Bfilter_enum_rooms%5D%5B0%5D=two&search%5Bfilter_float_price%3Ato%5D=2500&search%5Border%5D=created_at%3Adesc#764927822",
+  "email": "mieszkania091@gmail.com",
+  "delayInSeconds": 60
 }
